k8s/fake-server/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-webserver
  template:
    metadata:
      labels:
        app: fake-webserver
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: fake-server-config
---
apiVersion: v1
kind: Service
metadata:
  name: fake-webserver
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fake-webserver

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fake-webserver-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cerberus-gateway
      namespace: default
  hostnames:
    - "localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: fake-webserver
          port: 80
